# django-breadcrumbs

./: README.rst  pyproject.toml
django_breadcrumbs/: apps.py  bread.py  views.py
